--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -153,8 +153,8 @@
             <div class="collapse navbar-collapse sub-menu-bar" id="navbarTwo">
               <ul class="navbar-nav m-auto">
                 <li class="nav-item active"><a class="page-scroll" href="#home">home</a></li>
-                <li class="nav-item"><a class="page-scroll" href="#services">Services</a></li>
                 <li class="nav-item"><a class="page-scroll" href="#about">About</a></li>
+                <li class="nav-item"><a class="page-scroll" href="#services">Services</a></li>
                 <li class="nav-item"><a class="page-scroll" href="#contact">Contact</a></li>
               </ul>
             </div>
@@ -212,10 +212,10 @@
                 <div class="slider-content">
                   <h1 class="title">XPDC</h1>
                   <p class="text text-capitalize">a dynamic provider of comprehensive logistics company. serve with professionalism</p>
-                  <ul class="slider-btn rounded-buttons">
+                  <!-- <ul class="slider-btn rounded-buttons">
                     <li><a class="main-btn rounded-one" href="#">GET STARTED</a></li>
                     <li><a class="main-btn rounded-two" href="#">DOWNLOAD</a></li>
-                  </ul>
+                  </ul> -->
                 </div> <!-- slider-content -->
               </div>
             </div> <!-- row -->
@@ -238,6 +238,37 @@
   </section>
 
   <!--====== SLIDER PART ENDS ======-->
+    
+    <!--====== FEATRES TWO PART START ======-->
+
+    <section id="about" class="features-area">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-10 col-md-10 col-sm-12">
+            <div class="single-features mt-40">
+              <div class="features-title-icon d-flex justify-content-between">
+                <h2 class="features-title">PT. XENA PRANADIPA DHIA CAKRA</h2>
+              </div>
+              <div class="features-content">
+                <div class="row align-items-center">
+                  <div class="col-lg-9 col-md-9 col-sm-12">
+                    <p class="text text-justify">PT. XENA PRANADIPA DHIA CAKRA (XPDC) is a dynamic provider of comprehensive logistics company with knowledge and professionalism since 2018 based in Indonesia. With many experiences in handling international and domestic airfreight and sea freight shipments, we offer a profound and personal approach to fulfill customer’s need in any size of business.Due to demand of the customers, the services of ours has expanded to land freight, customs clearance brokerage, warehousing & packaging also handcarry service that makes us become a one-stop logistics partner.
+                    <br><br>
+                    We diversified service offering includes unique logistic handling and services to meet our customer’s unique request. We present our customers a center of excellence they can partner with and benefit from full transparency and a sincere commitment to mutual success.
+                    </p>
+                  </div>
+                  <div class="col">
+                    <img src="assets/images/logo-xpdc.png" alt="Logo" width="100%">
+                  </div>
+                </div>
+              </div>
+            </div> <!-- single features -->
+          </div>
+        </div> <!-- row -->
+      </div> <!-- container -->
+  </section>
+
+  <!--====== FEATRES TWO PART ENDS ======-->
   
   <!--====== FEATRES TWO PART START ======-->
 
@@ -314,7 +345,7 @@
   
   <!--====== ABOUT PART START ======-->
 
-  <section id="about" class="about-area bg-grey">
+  <section id="service2" class="about-area bg-grey">
     <div class="container">
       <div class="row">
         <div class="col-lg-5">
@@ -394,7 +425,7 @@
         </div>
         <div class="col-lg-7">
           <div class="about-image mt-50 h-100">
-            <img id="img_about" src="assets/images/about.jpg" alt="about" style="height: 100%; object-fit: cover; object-position: center;">
+            <img id="img_about" src="assets/images/AIR-FREIGHT-600x399.jpg" alt="about" style="height: 100%; object-fit: cover; object-position: center;">
           </div> <!-- faq image -->
         </div>
       </div> <!-- row -->
@@ -423,17 +454,17 @@
         <div class="col-lg-6 col-md-10">
           <div class="section-title text-center pb-30">
             <h3 class="title">Contact</h3>
-            <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p>
+            <!-- <p class="text">Stop wasting time and money designing and managing a website that doesn’t get results. Happiness guaranteed!</p> -->
           </div> <!-- section title -->
         </div>
       </div> <!-- row -->
-      <div class="row">
+      <!-- <div class="row">
         <div class="col-lg-12">
           <div class="contact-map mt-30">
             <iframe id="gmap_canvas" src="https://maps.google.com/maps?q=Mission%20District%2C%20San%20Francisco%2C%20CA%2C%20USA&t=&z=13&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe>
-          </div> <!-- row -->
+          </div>
         </div>
-      </div> <!-- row -->
+      </div> -->
       <div class="contact-info pt-30">
         <div class="row">
           <div class="col-lg-4 col-md-6">
@@ -507,7 +538,7 @@
                 <p class="form-message"></p>
                 <div class="col-md-12">
                   <div class="form-input light-rounded-buttons mt-30">
-                    <button class="main-btn light-rounded-two">Send Message</button>
+                    <button class="btn btn-warning">Send Message</button>
                   </div> <!-- form input -->
                 </div>
               </div> <!-- row -->
@@ -527,7 +558,7 @@
       <div class="row justify-content-center">
         <div class="col-lg-6">
           <div class="footer-logo text-center">
-            <a class="mt-30" href="index.html"><img src="assets/images/logo.svg" alt="Logo"></a>
+            <a class="mt-30" href="index.html"><img src="assets/images/logo-xpdc.png" alt="Logo"></a>
           </div> <!-- footer logo -->
           <ul class="social text-center mt-60">
             <li><a href="#"><i class="lni lni-facebook-filled"></i></a></li>
@@ -540,7 +571,7 @@
             <span class="mail">inquiry@xpdcid.com</span>
           </div>
           <div class="copyright text-center mt-35">
-            <p class="text">Designed by <a href="https://uideck.com" rel="nofollow">UIdeck</a> and Built-with <a rel="nofollow" href="https://ayroui.com">Ayro UI</a> </p>
+            <p class="text">Designed by <a href="#" rel="nofollow" class="text-yellow">XPDC</a> </p>
           </div> <!--  copyright -->
         </div>
       </div> <!-- row -->
