--- a/landing_page/index.html
+++ b/landing_page/index.html
@@ -283,7 +283,7 @@
         </div>
       </div> <!-- row -->
       <div class="row justify-content-center">
-        <a href="#about" onclick="$('#headingOne a').trigger('click');" data-wow-delay="0.6s" class="page-scroll wow bounceIn m-1 col-md-3 col-sm-9 px-0">
+        <a href="#service2" onclick="$('#headingOne a').trigger('click');" data-wow-delay="0.6s" class="page-scroll wow bounceIn m-1 col-md-3 col-sm-9 px-0">
           <div class="py-4 px-1 text-center border-2px border rounded border-white bg-yellow text-white hover-effect-1 to-yellow h-100">
             <div class="py-4">
               <h1 class="text-uncolor"><i class="fas fa-plane"></i></h1>
@@ -292,7 +292,7 @@
             </div>
           </div>
         </a>
-        <a href="#about" onclick="$('#headingTwo a').trigger('click');" data-wow-delay="0.6s" class="page-scroll wow bounceIn m-1 col-md-3 col-sm-9 px-0">
+        <a href="#service2" onclick="$('#headingTwo a').trigger('click');" data-wow-delay="0.6s" class="page-scroll wow bounceIn m-1 col-md-3 col-sm-9 px-0">
           <div class="py-4 px-1 text-center border-2px border rounded border-white bg-yellow text-white hover-effect-1 to-yellow h-100">
             <div class="py-4">
               <h1 class="text-uncolor"><i class="fas fa-ship"></i></h1>
@@ -301,7 +301,7 @@
             </div>
           </div>
         </a>
-        <a href="#about" onclick="$('#headingThree a').trigger('click');" data-wow-delay="0.6s" class="page-scroll wow bounceIn m-1 col-md-3 col-sm-9 px-0">
+        <a href="#service2" onclick="$('#headingThree a').trigger('click');" data-wow-delay="0.6s" class="page-scroll wow bounceIn m-1 col-md-3 col-sm-9 px-0">
           <div class="py-4 px-1 text-center border-2px border rounded border-white bg-yellow text-white hover-effect-1 to-yellow h-100">
             <div class="py-4">
               <h1 class="text-uncolor"><i class="fas fa-truck"></i></h1>
@@ -310,7 +310,7 @@
             </div>
           </div>
         </a>
-        <a href="#about" onclick="$('#headingFore a').trigger('click');" data-wow-delay="0.6s" class="page-scroll wow bounceIn m-1 col-md-3 col-sm-9 px-0">
+        <a href="#service2" onclick="$('#headingFore a').trigger('click');" data-wow-delay="0.6s" class="page-scroll wow bounceIn m-1 col-md-3 col-sm-9 px-0">
           <div class="py-4 px-1 text-center border-2px border rounded border-white bg-yellow text-white hover-effect-1 to-yellow h-100">
             <div class="py-4">
               <h1 class="text-uncolor"><i class="fas fa-boxes"></i></h1>
@@ -319,7 +319,7 @@
             </div>
           </div>
         </a>
-        <a href="#about" onclick="$('#headingFive a').trigger('click');" data-wow-delay="0.6s" class="page-scroll wow bounceIn m-1 col-md-3 col-sm-9 px-0">
+        <a href="#service2" onclick="$('#headingFive a').trigger('click');" data-wow-delay="0.6s" class="page-scroll wow bounceIn m-1 col-md-3 col-sm-9 px-0">
           <div class="py-4 px-1 text-center border-2px border rounded border-white bg-yellow text-white hover-effect-1 to-yellow h-100">
             <div class="py-4">
               <h1 class="text-uncolor"><i class="fas fa-exchange-alt"></i></h1>
@@ -328,7 +328,7 @@
             </div>
           </div>
         </a>
-        <a href="#about" onclick="$('#headingSix a').trigger('click');" data-wow-delay="0.6s" class="page-scroll wow bounceIn m-1 col-md-3 col-sm-9 px-0">
+        <a href="#service2" onclick="$('#headingSix a').trigger('click');" data-wow-delay="0.6s" class="page-scroll wow bounceIn m-1 col-md-3 col-sm-9 px-0">
           <div class="py-4 px-1 text-center border-2px border rounded border-white bg-yellow text-white hover-effect-1 to-yellow h-100">
             <div class="py-4">
               <h1 class="text-uncolor"><i class="fas fa-people-carry"></i></h1>
